# rust-website

./: .gitignore  Cargo.toml  README.md  Rocket.toml  deploy.sh
src/: main.rs
static/templates/: about.html.hbs  contact.html.hbs  error.html.hbs  footer.html.hbs  header.html.hbs  index.html.hbs  layout.html.hbs  legals.html.hbs  not_found.html.hbs  projects.html.hbs
templates/: about.hbs  about.html.hbs  footer.hbs  footer.html.hbs  header.hbs  header.html.hbs  index.hbs  index.html.hbs  layout.hbs  layout.html.hbs  legals.hbs  legals.html.hbs  not_found.hbs  not_found.html.hbs  projects.html.hbs
